tests/neg/semantic_system_env_bad_arity.baa
// EXPECT: عدد معاملات 'متغير_بيئة' غير صحيح

صحيح الرئيسية() {
    نص ن = متغير_بيئة().
    إرجع ٠.
}
